# testpublic

./: CMakeLists.txt  CMakeSettings.json  NDE-Format.bsx  README.md
compatibilities/: FileFormat.cpp  FileFormat.h  FileFormatChanges.h  FileFormatChanges_3_0_0.cpp
documents/: Axes - use cases.drawio  GeneralMapping-Commented.json  GeneralWeld-Commented.json  JSON exemple by section.json  JSON high level architecture.json  NDE_3.1.0_file_format-Plate_Convention_v0.9.docx  NDE_Plate.md  genMappingElbowExample.py
documents/coordinates_pycode/: GeometryClasses.py  script_WedgeAndProbeCoordinates.py  script_uvCoordinates.py  test_involute.py
examples/create-file/: main.cpp
examples/read-ascan/: main.cpp
examples/read-setup/: main.cpp
examples/version-compatibilities/: main.cpp
examples/write-ascan/: main.cpp
examples/write-cscan/: main.cpp
schemas/: NDE-FileFormat-Schema-2.2.13.json  NDE-FileFormat-Schema-3.1.0.md  NDE-FileFormat-Schema-3.1.0_2.md  NDE-FileFormat-Schema-3.2.0.json  WithoutAddPropTempNDE-FileFormat-Schema-3.1.0.json  test.son  tmp0000.html
scripts/: copy-git-files.bat
